--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   dio: ^2.0.11
-  flutter_swiper: ^1.1.4
-  flutter_screenutil: ^0.5.1
+  flutter_swiper: ^1.0.6
+  flutter_screenutil: ^0.4.2
+  url_launcher: ^5.0.1
+  flutter_easyrefresh: ^1.2.7
+  fluttertoast: ^2.1.1
+  provide: ^1.0.2
+
+
 
 dev_dependencies:
   flutter_test:
